feat: Update environment configuration and enhance Docker setup with Traefik integration

--- a/iac/.env.example
+++ b/iac/.env.example
@@ -1,2 +1,6 @@
 VITE_OPENAI_API_KEY=
 VITE_GOOGLE_MAPS_API_KEY=
+
+COMPOSE_PROJECT_NAME=voice-assistance-iac
+DOMAIN_NAME=voice-assistance.yonder-makers.com
+CLOUDFLARED_TOKEN=YOUR_CLOUDFLARED_TOKEN_HERE
