--- a/iac/docker-compose.yml
+++ b/iac/docker-compose.yml
@@ -1,25 +1,52 @@
 version: '3.8'
 
 services:
-  web:
+  app:
     build:
       context: ..
       dockerfile: Dockerfile
       args:
         VITE_OPENAI_API_KEY: ${VITE_OPENAI_API_KEY}
         VITE_GOOGLE_MAPS_API_KEY: ${VITE_GOOGLE_MAPS_API_KEY}
-    container_name: voice-assist-pro
-    ports:
-      - "8080:80"
+    container_name: voice-assistance-app
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80"]
       interval: 30s
       timeout: 10s
       retries: 3
-    networks:
-      - voice-assist-network
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.app.priority=100'
+      - 'traefik.http.routers.app.rule=Host(`${DOMAIN_NAME}`)'
+      - 'traefik.http.services.app.loadbalancer.server.port=80'
+      - 'iac-name=${COMPOSE_PROJECT_NAME}'
 
-networks:
-  voice-assist-network:
-    driver: bridge 
+  autoheal:
+    restart: unless-stopped
+    image: willfarrell/autoheal
+    environment:
+      - AUTOHEAL_CONTAINER_LABEL=all
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  cloudflare-tunnel:
+    restart: unless-stopped
+    image: cloudflare/cloudflared:latest
+    command: tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN}
+  
+  traefik:
+    restart: unless-stopped
+    image: traefik:v2.10
+    # ports:
+    #   - '80:80'
+    #   - '8080:8080'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik:/etc/traefik
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.traefik-dashboard.priority=100'
+      - 'traefik.http.routers.traefik-dashboard.rule=Host(`traefik.${DOMAIN_NAME}`)'
+      - 'traefik.http.services.traefik-dashboard.loadbalancer.server.port=8080'
+      - 'iac-name=${COMPOSE_PROJECT_NAME}'
